--- a/app.wxss
+++ b/app.wxss
@@ -4,6 +4,11 @@ page {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
+.page-header {
+  padding: 20rpx;
+  margin-bottom: 20rpx;
+}
+
 /* 主题色彩 */
 .primary-color {
   color: #6BBF59;
