--- a/pages/learning/learning.wxml
+++ b/pages/learning/learning.wxml
@@ -48,7 +48,7 @@
         </view>
         <view class="course-info">
           <view class="course-meta">
-            <image class="course-image" src="{{item.icon}}" />
+            <image class="course-image" src="{{item.icon}}" data-course-id="{{item.id}}" bindtap="startLearning" />
             <text class="course-time">{{item.title}}</text>
           </view>
         </view>
@@ -64,12 +64,6 @@
             <button wx:if="{{item.status !== 'locked'}}" class="btn btn-secondary course-btn" bindtap="startLearning" data-course-id="{{item.id}}" catchtap="true">
               {{item.status === 'completed' ? '已完成' : '可学习'}}
             </button>
-            <button wx:if="{{item.status === 'completed'}}" class="btn btn-primary course-btn" bindtap="viewAssignment" data-course-id="{{item.id}}" catchtap="true">
-              查看作业
-            </button>
-            <button wx:if="{{item.status === 'locked'}}" class="btn btn-disabled course-btn" disabled>
-              未解锁
-            </button>
           </view>
         </view>
         <view class="course-experience">
@@ -80,7 +74,7 @@
   </view>
   <!-- 作业列表 -->
   <view wx:if="{{nowPage==='作业回顾'}}" class="courses-section">
-    <view class="course-card {{item.status === 'locked' ? 'locked' : ''}}" wx:for="{{filteredCourses}}" wx:key="id" bindtap="onCourseClick" data-course-id="{{item.id}}">
+    <view class="course-card {{item.status === 'locked' ? 'locked' : ''}}" wx:for="{{filteredCourses}}" wx:key="id" bindtap="jumpToZuoye" data-zuoye-id="{{item.id}}">
       <view class="course-header">
         <view class="course-icon {{item.status}}">
           <text wx:if="{{item.status === 'completed'}}">✅</text>
@@ -103,11 +97,14 @@
           </view>
           <view wx:else class="status-tag status-locked">未解锁</view>
           <view class="course-buttons">
-            <button wx:if="{{item.status !== 'locked'}}" class="btn btn-secondary course-btn" bindtap="startLearning" data-course-id="{{item.id}}" catchtap="true">
+            <button wx:if="{{item.status !== 'locked'}}" class="btn btn-secondary course-btn" >
               {{item.status === 'completed' ? '已完成' : '可学习'}}
             </button>
-            <button wx:if="{{item.status === 'completed'}}" class="btn btn-primary course-btn" bindtap="viewAssignment" data-course-id="{{item.id}}" catchtap="true">
+            <button wx:if="{{item.status === 'completed'}}" class="btn btn-primary course-btn" bindtap="jumpToZuoye" data-zuoye-id="{{item.id}}">
               查看作业
+            </button>
+             <button wx:if="{{item.status === 'available'}}" class="btn btn-primary course-btn" bindtap="jumpToZuoye" data-zuoye-id="{{item.id}}">
+              开始作业
             </button>
             <button wx:if="{{item.status === 'locked'}}" class="btn btn-disabled course-btn" disabled>
               未解锁
